# codex-bridge

./: .gitignore  AGENT_GATEWAY.md  CHANGELOG.md  PROJECT_DESIGN.md  PROJECT_DESIGN.zh-CN.md  README.en.md  README.md  README.zh-CN.md  REAL_DEVICE_VALIDATION.md  REAL_DEVICE_VALIDATION.zh-CN.md  TODO.md  pyproject.toml
data/: hosts.json
desktop-client/: .gitignore  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
desktop-client/src/main/: index.ts  ipc.ts
desktop-client/tests/: agentGatewayBootstrapCore.test.ts  agentGatewayDiagnosticsCore.test.ts  agentGatewayRoutes.test.ts  agentGatewaySecurity.test.ts  agentGatewayService.test.ts  androidGatewayService.test.ts
docs/: DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  ENGINEERING_ROADMAP.zh-CN.md  GETTING_STARTED.md  GETTING_STARTED.zh-CN.md
scripts/: add-windows-host.ps1  authorize-managed-ssh-key.ps1  bootstrap-client-runtime.ps1  build-desktop-exe.ps1  exec-remote.ps1  init.ps1  launch-bridge-client.ps1  list-hosts.ps1  list-remote-dir.ps1  probe-host.ps1  read-remote-file.ps1  run-remote-workflow.ps1  search-remote-text.ps1  setup-android-device.ps1  system-info.ps1  write-remote-file.ps1
skills/codex-bridge/: SKILL.md
src/remote_agent_bridge/: __init__.py  __main__.py  cli.py  client_services.py  exceptions.py  factory.py  models.py  service.py  storage.py
tests/: conftest.py  test_android_provider.py  test_cli.py  test_service.py  test_storage.py  test_windows_provider.py
(+40 files in other folders)
