[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-agent-bridge"
version = "0.1.0"
description = "MVP for remote host control with a provider/adapter architecture."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "paramiko>=3.5,<4.0",
]

[project.scripts]
remote-agent-bridge = "remote_agent_bridge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
